// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel renders 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <div
    className="sc-ceNcIt cmRZOB"
  >
    <div
      className="sc-jRSqCh cJghQk"
    >
      <ul
        className="sc-fZuPrs sc-jPGhGf eVYiTZ kpBRip"
      >
        <li
          className="sc-fXiGvq eFcdaS"
        >
          <div
            className="sc-bVmfKC jYwhGg"
          >
            0
          </div>
        </li>
        <li
          className="sc-fXiGvq eFcdaS"
        >
          <div
            className="sc-bVmfKC jYwhGg"
          >
            1
          </div>
        </li>
        <li
          className="sc-fXiGvq eFcdaS"
        >
          <div
            className="sc-bVmfKC jYwhGg"
          >
            2
          </div>
        </li>
        <li
          className="sc-fXiGvq eFcdaS"
        >
          <div
            className="sc-bVmfKC jYwhGg"
          >
            3
          </div>
        </li>
        <li
          className="sc-fXiGvq eFcdaS"
        >
          <div
            className="sc-bVmfKC jYwhGg"
          >
            4
          </div>
        </li>
        <li
          className="sc-fXiGvq eFcdaS"
        >
          <div
            className="sc-bVmfKC jYwhGg"
          >
            5
          </div>
        </li>
        <li
          className="sc-fXiGvq eFcdaS"
        >
          <div
            className="sc-bVmfKC jYwhGg"
          >
            6
          </div>
        </li>
        <li
          className="sc-fXiGvq eFcdaS"
        >
          <div
            className="sc-bVmfKC jYwhGg"
          >
            7
          </div>
        </li>
        <li
          className="sc-fXiGvq eFcdaS"
        >
          <div
            className="sc-bVmfKC jYwhGg"
          >
            8
          </div>
        </li>
        <li
          className="sc-fXiGvq eFcdaS"
        >
          <div
            className="sc-bVmfKC jYwhGg"
          >
            9
          </div>
        </li>
        <li
          className="sc-fXiGvq eFcdaS"
        >
          <div
            className="sc-bVmfKC jYwhGg"
          >
            10
          </div>
        </li>
        <li
          className="sc-fXiGvq eFcdaS"
        >
          <div
            className="sc-bVmfKC jYwhGg"
          >
            11
          </div>
        </li>
        <li
          className="sc-fXiGvq eFcdaS"
        >
          <div
            className="sc-bVmfKC jYwhGg"
          >
            12
          </div>
        </li>
        <li
          className="sc-fXiGvq eFcdaS"
        >
          <div
            className="sc-bVmfKC jYwhGg"
          >
            13
          </div>
        </li>
        <li
          className="sc-fXiGvq eFcdaS"
        >
          <div
            className="sc-bVmfKC jYwhGg"
          >
            14
          </div>
        </li>
        <li
          className="sc-fXiGvq eFcdaS"
        >
          <div
            className="sc-bVmfKC jYwhGg"
          >
            15
          </div>
        </li>
        <li
          className="sc-fXiGvq eFcdaS"
        >
          <div
            className="sc-bVmfKC jYwhGg"
          >
            16
          </div>
        </li>
        <li
          className="sc-fXiGvq eFcdaS"
        >
          <div
            className="sc-bVmfKC jYwhGg"
          >
            17
          </div>
        </li>
        <li
          className="sc-fXiGvq eFcdaS"
        >
          <div
            className="sc-bVmfKC jYwhGg"
          >
            18
          </div>
        </li>
        <li
          className="sc-fXiGvq eFcdaS"
        >
          <div
            className="sc-bVmfKC jYwhGg"
          >
            19
          </div>
        </li>
        <li
          className="sc-fXiGvq eFcdaS"
        >
          <div
            className="sc-bVmfKC jYwhGg"
          >
            20
          </div>
        </li>
        <li
          className="sc-fXiGvq eFcdaS"
        >
          <div
            className="sc-bVmfKC jYwhGg"
          >
            21
          </div>
        </li>
        <li
          className="sc-fXiGvq eFcdaS"
        >
          <div
            className="sc-bVmfKC jYwhGg"
          >
            22
          </div>
        </li>
        <li
          className="sc-fXiGvq eFcdaS"
        >
          <div
            className="sc-bVmfKC jYwhGg"
          >
            23
          </div>
        </li>
        <li
          className="sc-fXiGvq eFcdaS"
        >
          <div
            className="sc-bVmfKC jYwhGg"
          >
            24
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Carousel renders RTL 1`] = `
<div
  dir="rtl"
>
  <div
    className="flex justify-around items-center w-full"
  >
    <div
      className="sc-ccATMr djRgnZ"
    >
      <div
        className="sc-jRSqCh cJghQk"
      >
        <ul
          className="sc-fZuPrs sc-jPGhGf eVYiTZ kpBRip"
        >
          <li
            className="sc-fXiGvq eFcdaS"
          >
            <div
              className="sc-fDrBGk eAiQlJ"
            >
              24
            </div>
          </li>
          <li
            className="sc-fXiGvq eFcdaS"
          >
            <div
              className="sc-fDrBGk eAiQlJ"
            >
              23
            </div>
          </li>
          <li
            className="sc-fXiGvq eFcdaS"
          >
            <div
              className="sc-fDrBGk eAiQlJ"
            >
              22
            </div>
          </li>
          <li
            className="sc-fXiGvq eFcdaS"
          >
            <div
              className="sc-fDrBGk eAiQlJ"
            >
              21
            </div>
          </li>
          <li
            className="sc-fXiGvq eFcdaS"
          >
            <div
              className="sc-fDrBGk eAiQlJ"
            >
              20
            </div>
          </li>
          <li
            className="sc-fXiGvq eFcdaS"
          >
            <div
              className="sc-fDrBGk eAiQlJ"
            >
              19
            </div>
          </li>
          <li
            className="sc-fXiGvq eFcdaS"
          >
            <div
              className="sc-fDrBGk eAiQlJ"
            >
              18
            </div>
          </li>
          <li
            className="sc-fXiGvq eFcdaS"
          >
            <div
              className="sc-fDrBGk eAiQlJ"
            >
              17
            </div>
          </li>
          <li
            className="sc-fXiGvq eFcdaS"
          >
            <div
              className="sc-fDrBGk eAiQlJ"
            >
              16
            </div>
          </li>
          <li
            className="sc-fXiGvq eFcdaS"
          >
            <div
              className="sc-fDrBGk eAiQlJ"
            >
              15
            </div>
          </li>
          <li
            className="sc-fXiGvq eFcdaS"
          >
            <div
              className="sc-fDrBGk eAiQlJ"
            >
              14
            </div>
          </li>
          <li
            className="sc-fXiGvq eFcdaS"
          >
            <div
              className="sc-fDrBGk eAiQlJ"
            >
              13
            </div>
          </li>
          <li
            className="sc-fXiGvq eFcdaS"
          >
            <div
              className="sc-fDrBGk eAiQlJ"
            >
              12
            </div>
          </li>
          <li
            className="sc-fXiGvq eFcdaS"
          >
            <div
              className="sc-fDrBGk eAiQlJ"
            >
              11
            </div>
          </li>
          <li
            className="sc-fXiGvq eFcdaS"
          >
            <div
              className="sc-fDrBGk eAiQlJ"
            >
              10
            </div>
          </li>
          <li
            className="sc-fXiGvq eFcdaS"
          >
            <div
              className="sc-fDrBGk eAiQlJ"
            >
              9
            </div>
          </li>
          <li
            className="sc-fXiGvq eFcdaS"
          >
            <div
              className="sc-fDrBGk eAiQlJ"
            >
              8
            </div>
          </li>
          <li
            className="sc-fXiGvq eFcdaS"
          >
            <div
              className="sc-fDrBGk eAiQlJ"
            >
              7
            </div>
          </li>
          <li
            className="sc-fXiGvq eFcdaS"
          >
            <div
              className="sc-fDrBGk eAiQlJ"
            >
              6
            </div>
          </li>
          <li
            className="sc-fXiGvq eFcdaS"
          >
            <div
              className="sc-fDrBGk eAiQlJ"
            >
              5
            </div>
          </li>
          <li
            className="sc-fXiGvq eFcdaS"
          >
            <div
              className="sc-fDrBGk eAiQlJ"
            >
              4
            </div>
          </li>
          <li
            className="sc-fXiGvq eFcdaS"
          >
            <div
              className="sc-fDrBGk eAiQlJ"
            >
              3
            </div>
          </li>
          <li
            className="sc-fXiGvq eFcdaS"
          >
            <div
              className="sc-fDrBGk eAiQlJ"
            >
              2
            </div>
          </li>
          <li
            className="sc-fXiGvq eFcdaS"
          >
            <div
              className="sc-fDrBGk eAiQlJ"
            >
              1
            </div>
          </li>
          <li
            className="sc-fXiGvq eFcdaS"
          >
            <div
              className="sc-fDrBGk eAiQlJ"
            >
              0
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Carousel renders visible index 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <div
    className="sc-jRSqCh cJghQk"
  >
    <ul
      className="sc-fZuPrs sc-jPGhGf dohqYN kpBRip"
    >
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-lbCmg BdFqK"
        >
          -1
          , 
          -1
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-lbCmg BdFqK"
        >
          -1
          , 
          -1
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-lbCmg BdFqK"
        >
          -1
          , 
          -1
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-lbCmg BdFqK"
        >
          -1
          , 
          -1
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-lbCmg BdFqK"
        >
          -1
          , 
          -1
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Carousel renders with Customized Arrows 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <div
    className="sc-jRSqCh cJghQk"
  >
    <button
      disabled={true}
      onClick={[Function]}
    >
      Scroll to left
    </button>
    <ul
      className="sc-fZuPrs sc-jPGhGf eVYiTZ kpBRip"
    >
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-ibSMNl beUscC"
        >
          0
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-ibSMNl beUscC"
        >
          1
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-ibSMNl beUscC"
        >
          2
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-ibSMNl beUscC"
        >
          3
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-ibSMNl beUscC"
        >
          4
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-ibSMNl beUscC"
        >
          5
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-ibSMNl beUscC"
        >
          6
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-ibSMNl beUscC"
        >
          7
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-ibSMNl beUscC"
        >
          8
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-ibSMNl beUscC"
        >
          9
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-ibSMNl beUscC"
        >
          10
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-ibSMNl beUscC"
        >
          11
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-ibSMNl beUscC"
        >
          12
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-ibSMNl beUscC"
        >
          13
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-ibSMNl beUscC"
        >
          14
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-ibSMNl beUscC"
        >
          15
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-ibSMNl beUscC"
        >
          16
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-ibSMNl beUscC"
        >
          17
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-ibSMNl beUscC"
        >
          18
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-ibSMNl beUscC"
        >
          19
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-ibSMNl beUscC"
        >
          20
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-ibSMNl beUscC"
        >
          21
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-ibSMNl beUscC"
        >
          22
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-ibSMNl beUscC"
        >
          23
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-ibSMNl beUscC"
        >
          24
        </div>
      </li>
    </ul>
    <button
      disabled={true}
      onClick={[Function]}
    >
      Scroll to Right
    </button>
  </div>
</div>
`;

exports[`Carousel renders with different Space 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <div
    className="sc-jRSqCh cJghQk"
  >
    <ul
      className="sc-fZuPrs sc-jPGhGf dohqYN kpBRip"
    >
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-fBfsKi iFAqya"
        >
          0
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-fBfsKi iFAqya"
        >
          1
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-fBfsKi iFAqya"
        >
          2
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-fBfsKi iFAqya"
        >
          3
        </div>
      </li>
      <li
        className="sc-fXiGvq eFcdaS"
      >
        <div
          className="sc-fBfsKi iFAqya"
        >
          4
        </div>
      </li>
    </ul>
  </div>
</div>
`;
